# SnapScrib

./: .gitignore  CONTRIBUTION.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
SnapScrib/: app.py
SnapScrib/transcription/: transcribe.py  transcribe_mlx.py  transcribe_whisper.py  transcribe_with_groq.py  transcribe_with_lightning_mlx.py  whisper.py
SnapScrib/transcription/SrtFiles/: VIDEO_test.srt
SnapScrib/transcription/json_files/: transcription_lightning.json
SnapScrib/video/: video.py
SnapScrib/youtube_audio/: extract_audio.py
backend/modules/: css.py
docs/: CONTRIBUTION.md
frontend/pages/: home.py
src/: app.py
src/backend/: app.py
src/backend/config/: __init__.py
src/backend/llm/: model.py  test_llm.py
src/backend/modules/: __init__.py  _transcription.py
src/backend/modules/app/: app_data.py
src/backend/modules/audio/: audio_data.py  audio_extractor.py  audio_extractor_factory.py  audio_extractor_interface.py  file_extractor.py  testing_extraction.py  youtube_extractor.py
src/backend/modules/summarizer/: llama_summarizer.py  summarizer.py  summarizer_factory.py  summarizer_interface.py  testing_summarizer.py
src/backend/modules/summary/: dummy_text.py  llama_summarizer.py  summarize.py  summarizer_blueprint.py  summarizer_factory.py  summarizer_interface.py  summarizer_llama.py  summary_data.py  test_summarizer.py  testing_summarizer.py
src/backend/modules/transcriber/: lightning_mlx_transcriber.py  transcribe.py  (+7 more)
src/backend/utils/: __init__.py  logger_config.py  status_tracker.py
src/tests/: transcription.py
(+21 files in other folders)
