[tool.poetry]
name = "snapscrib"
version = "0.1.0"
description = ""
authors = ["abahde <71208362+arvedb@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
moviepy = "^1.0.3"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
