[tool.poetry]
name = "snapscrib"
version = "0.1.0"
description = ""
authors = ["abahde <71208362+arvedb@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
lightning-whisper-mlx = {git = "https://github.com/mustafaaljadery/lightning-whisper-mlx.git"}
mlx-whisper = "^0.1.0"
yt-dlp = "^2024.7.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
